app/styles/design.css
/* ... */
/* Wires makers */

.link.joint-theme-default .connection-wrap {
  stroke: #777;
  stroke-width: 14;
  cursor: pointer;
  opacity: 0;
}

.link.joint-theme-default .link-tools .tool-remove circle {
  fill: #ff333a;
}
.link.joint-theme-default .link-tools .tool-remove path {
  fill: #FFF;
}

.link.joint-theme-default .marker-arrowhead {
  fill: #AAA;
}
.link.joint-theme-default .marker-arrowhead:hover {
  fill: #888;
}

.link.joint-theme-default .marker-vertex {
  fill: #AAA;
}
.link.joint-theme-default .marker-vertex:hover {
  fill: #888;
}

.link.joint-theme-default .marker-vertex-remove {
  fill: #FFF;
  transition: opacity 0.4s;
}
.link.joint-theme-default .marker-vertex-remove-area {
  fill: #333;
  transition: opacity 0.4s;
}

/* Resizer */

.resizer {
  position: absolute;
  pointer-events: auto;
  bottom: -5px;
  right: -5px;
  width: 20px;
  height: 20px;
}

/* Colors */
.color-indianred        {
 background: rgba(205,92,92,0.2)  url('../resources/images/icons/arrow-right.svg') no-repeat 2px 0 !important;
  border: 3px solid IndianRed !important;
  background-size: cover !important;
}

.color-red              {
 background:  rgba(255,0,0,0.2) url('../resources/images/icons/arrow-right.svg') no-repeat 2px 0 !important;
  border: 3px solid Red !important;
  background-size: cover !important;
}
.color-deeppink         {
 background:  rgba(255,20,147,0.2)  url('../resources/images/icons/arrow-right.svg') no-repeat 2px 0 !important;
  border: 3px solid DeepPink !important;
  background-size: cover !important;
}
.color-mediumvioletred  {
 background:  rgba(199,21,133,0.2)  url('../resources/images/icons/arrow-right.svg') no-repeat 2px 0 !important;
  border: 3px solid MediumVioletRed !important;
  background-size: cover !important;
}

.color-coral            {

 background:  rgba(255,127,80,0.2) url('../resources/images/icons/arrow-right.svg') no-repeat 2px 0 !important;
  border: 3px solid Coral !important;
  background-size: cover !important;
}
.color-orangered        {
 background:  rgba(255,69,0,0.2)  url('../resources/images/icons/arrow-right.svg') no-repeat 2px 0 !important;
  border: 3px solid OrangeRed !important;
  background-size: cover !important;
}
.color-darkorange       {
 background:  rgba(255,140,0,0.2)  url('../resources/images/icons/arrow-right.svg') no-repeat 2px 0 !important;
  border: 3px solid DarkOrange !important;
  background-size: cover !important;
}
.color-gold             {
 background:  rgba(255,215,0,0.2)  url('../resources/images/icons/arrow-right.svg') no-repeat 2px 0 !important;
  border: 3px solid Gold !important;

  background-size: cover !important;
}
.color-yellow           {
 background:  rgba(255,255,0,0.2)  url('../resources/images/icons/arrow-right.svg') no-repeat 2px 0 !important;
  border: 3px solid Yellow !important;
 
  background-size: cover !important;
 } 

.color-fuchsia          {
  background:  rgba(255,0,255,0.2) url('../resources/images/icons/arrow-right.svg') no-repeat 2px 0 !important;
  border: 3px solid Fuchsia !important;
  background-size: cover !important;
}
.color-slateblue        {
 background:  rgba(106,90,205,0.2)  url('../resources/images/icons/arrow-right.svg') no-repeat 2px 0 !important;
  border: 3px solid SlateBlue !important;
  background-size: cover !important;
}
.color-greenyellow      {
 background:  rgba(173,255,47,0.2)  url('../resources/images/icons/arrow-right.svg') no-repeat 2px 0 !important;
  border: 3px solid GreenYellow !important;
  background-size: cover !important;
}

.color-springgreen      {
 background:  rgba(0,255,127,0.2) url('../resources/images/icons/arrow-right.svg') no-repeat 2px 0 !important;
  border: 3px solid SpringGreen !important;
  background-size: cover !important;
}
.color-darkgreen        {
 background:  rgba(0,100,0,0.2)  url('../resources/images/icons/arrow-right.svg') no-repeat 2px 0 !important;
  border: 3px solid DarkGreen !important;
  background-size: cover !important;
}
.color-olivedrab        {
 background:  rgba(107,142,35,0.2)  url('../resources/images/icons/arrow-right.svg') no-repeat 2px 0 !important;
  border: 3px solid OliveDrab !important;
  background-size: cover !important;
}
.color-lightseagreen    {
 background:  rgba(32,178,170,0.2) url('../resources/images/icons/arrow-right.svg') no-repeat 2px 0 !important;
  border: 3px solid LightSeaGreen !important;
  background-size: cover !important;
}
.color-turquoise        {
 background:  rgba(64,224,208,0.2) url('../resources/images/icons/arrow-right.svg') no-repeat 2px 0 !important;
  border: 3px solid Turquoise !important;
  background-size: cover !important;
}
.color-steelblue        {
 background:  rgba(70,130,180,0.2) url('../resources/images/icons/arrow-right.svg') no-repeat 2px 0 !important;
  border: 3px solid SteelBlue !important;
  background-size: cover !important;
}
.color-deepskyblue      {
 background:  rgba(0,191,255,0.2) url('../resources/images/icons/arrow-right.svg') no-repeat 2px 0 !important;
  border: 3px solid DeepSkyBlue !important;
  background-size: cover !important;
}
.color-royalblue        {
 background:  rgba(65,105,225,0.2) url('../resources/images/icons/arrow-right.svg') no-repeat 2px 0 !important;
  border: 3px solid RoyalBlue !important;
  background-size: cover !important;

}
.color-navy             {
 background:  rgba(0,0,128,0.2)  url('../resources/images/icons/arrow-right.svg') no-repeat 2px 0 !important;
  border: 3px solid Navy !important;
  background-size: cover !important;

}
           
.ace_gutter-cell {
  padding-left: 30px!important;
}

.ace_folding-enabled > .ace_gutter-cell {
  padding-right: 15px!important;
}
.ace_gutter-layer{

}

